--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@vitest/coverage-v8": "4.0.6",
     "tsx": "^4.20.6",
     "vitest": "^4.0.6"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
